--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -4,3 +4,9 @@ title: Week 1 - Social Network Analysis (SNA)
 ---
 
 ### Introduction
+Carolan (2014) explains how SNA is applied in learning science research to discover the interaction patterns in the pedagogical settings/learning environment.
+> social network analysis focuses on the types of relations one has with others and
+> how these relations influence individual and group behavior and/or attitudes.
+
+Reference:
+Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.
