--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -3,10 +3,13 @@ layout: post
 title: Week 1 - Social Network Analysis (SNA)
 ---
 
-### Introduction
+### First impression:
+My initial understanding of social network was from the strong ties and weak ties among people in social media. "The relations in twitter could be bidirectional or unidirectional" (Jeragh et al., 2012, p. 905). While Twitter is a unidirectional network that the network could be formed by only one person following another person without approval, Facebook is a bidirectional network that an "Add Friend" request needs to be confirmed by the request receiver in order to establish the connection. 
+
 Carolan (2014) explains how SNA is applied in learning science research to discover the interaction patterns in the pedagogical settings/learning environment.
 > social network analysis focuses on the types of relations one has with others and
 > how these relations influence individual and group behavior and/or attitudes.
 
-Reference:
+### Reference:
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.
+Jeragh, M., AlQuraishi, E., & Aldwaisan, E. (2012). A Twitter-Based Weighted Reputation system. *Procedia Computer Science.* 10. 902-908. 10.1016/j.procs.2012.06.119. 
