--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -4,3 +4,9 @@ title: Week 2 - Basic Network Concepts
 ---
 
 ### Concepts
+> Perhaps one important change introduced by active learning is the facilitation of student > networks to be stronger, less centralized, or structured in some other new way to maximize > student learning. (Carolan, 2014, chapter 2) 
+Since active learning is based on constructivism, how students interact with the components (peers, instructor, content) in a learning environment influences each individual's learning experience and how effectively they construct their knowledge. A well-structured less-centralized learning environment allows decentralized personalization. Each student needs to be more active in seeking their own learning networks.
+
+### Reference:
+Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
+Grunspan, Daniel Z., Benjamin L. Wiggins, and Steven M. Goodreau. 2014. “Understanding Classrooms Through Social Network Analysis: A Primer for Social Network Analysis in Education Research.” Edited by Erin Dolan. CBELife Sciences Education 13 (2): 167–78. https://doi.org/10.1187/cbe.13-08-0162.
