--- a/_posts/2021-02-05-Week3.md
+++ b/_posts/2021-02-05-Week3.md
@@ -3,4 +3,20 @@ layout: post
 title: Week 3 - Applications
 ---
 
-###
+### Background information
+> First, social network analysis is applicable to multiple levels of analysis. In 
+> educational research, this analytical lens can be applied to students, classrooms, 
+> schools, or districts. This makes it possible to study nearly any type of social system 
+> characterized by relations among actors. Second, social network analysis can combine the 
+> best aspects of qualitative, quantitative, and even graphical data, which allows for a 
+> richer description of social life that is both contextually grounded and empirically 
+> rigorous (Carolan, 2014, chapter 2).
+
+### Takeaway: 
+1. A binary relationship indicates whether a relationship exists between two nodes (1) or not (0).   
+2. A valued relationship has weight to indicate the strength of the relationship.   
+3. In a directed relationship, the relationship can be symmetric (reciprocal, two-way) between the two nodes or asymmetric (one-way).   
+4. A directed network has in-degree centrality and out-degree centrality.
+
+### Reference:
+Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
