--- a/_posts/2021-02-26-Week6.md
+++ b/_posts/2021-02-26-Week6.md
@@ -3,4 +3,7 @@ layout: post
 title: Week 6 - Centrality and Centralization
 ---
 
-###
+### Resources
+This [resource](https://cs.brynmawr.edu/Courses/cs380/spring2013/section02/slides/05_Centrality.pdf) presents the concepts of network centrality with the graphs, mathematical models, and examples.
+
+### Reference:
