--- a/_posts/2021-04-16-Week13.md
+++ b/_posts/2021-04-16-Week13.md
@@ -5,3 +5,5 @@ title: Week 13 - Novel Approaches and Analytics
 
 ### Collaboration Index (CI)
 I was inspired by the study of [Luhrs and McAnally-Salas (2016)](https://www.ncolr.org/jiol/issues/pdf/14.1.3.pdf). The researchers used social network analysis to design a collaboration index to effectively identify the levels of collaboration in asynchronous discussion forums in hybrid and online course.
+
+### Reference:
