--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -6,7 +6,8 @@ title: Week 2 - Basic Network Concepts
 ### Concepts
 > Perhaps one important change introduced by active learning is the facilitation of student
 > networks to be stronger, less centralized, or structured in some other new way to maximize 
-> student learning. (Carolan, 2014, chapter 2) 
+> student learning. (Carolan, 2014, chapter 2).   
+
 Since active learning is based on constructivism, how students interact with the components (peers, instructor, content) in a learning environment influences each individual's learning experience and how effectively they construct their knowledge. A well-structured less-centralized learning environment allows decentralized personalization. Each student needs to be more active in seeking their own learning networks.   
 
 I was wondering how important classroom interactions are to the learning outcome. Isn't that effective learning coming from connecting the new content (new node) to the individual's prior knowledge (an existing node)? To what degree does classroom interaction help in creating the tie?
