--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -7,13 +7,15 @@ title: Week 1 - Social Network Analysis (SNA)
 > Individuals are embedded in thick webs of social relations and interactions (Borgatti et 
 > al., 2009).   
 
-My initial understanding of social network was from the strong ties and weak ties among people in social media. "The relations in twitter could be bidirectional or unidirectional" (Jeragh et al., 2012, p. 905). While Twitter is a unidirectional network that the network could be formed by only one person following another person without approval, Facebook is a bidirectional network that an "Add Friend" request needs to be confirmed by the request receiver in order to establish the connection. 
+My initial understanding of social network was about the "[six degrees of separation](https://en.wikipedia.org/wiki/Six_degrees_of_separation)" and the strong ties and weak ties among people in social media. The relations in twitter could be bidirectional or unidirectional" (Jeragh et al., 2012, p. 905). The ""While Twitter is a unidirectional network that the network could be formed by only one person following another person without approval, Facebook is a bidirectional network that an "Add Friend" request needs to be confirmed by the request receiver in order to establish the connection. 
 
 Carolan (2014, chapter 1) explains how SNA is applied in learning science research to discover the interaction patterns in the pedagogical settings/learning environment.
 > Social network analysis focuses on the types of relations one has with others and
 > how these relations influence individual and group behavior and/or attitudes.
 
 ### Reference:
-Borgatti, Stephen P, Ajay Mehra, Daniel J Brass, and Giuseppe Labianca. 2009. “Network Analysis in the Social Sciences.” Science 323 (5916): 892–95. https://doi.org/10.1126/science.1165821.
+Borgatti, Stephen P, Ajay Mehra, Daniel J Brass, and Giuseppe Labianca. 2009. “Network Analysis in the Social Sciences.” Science 323 (5916): 892–95. https://doi.org/10.1126/science.1165821.   
+
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
+
 Jeragh, M., AlQuraishi, E., & Aldwaisan, E. (2012). A Twitter-Based Weighted Reputation system. *Procedia Computer Science.* 10. 902-908. 10.1016/j.procs.2012.06.119.
