--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 2 - Basic Network Concepts
 ---
 
-### Concepts
+### Concepts:  
 > Perhaps one important change introduced by active learning is the facilitation of student
 > networks to be stronger, less centralized, or structured in some other new way to maximize 
 > student learning. (Carolan, 2014, chapter 2).   
