--- a/_posts/2021-02-05-Week3.md
+++ b/_posts/2021-02-05-Week3.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 3 - Applications
 ---
 
-### Background information
+### Background information:  
 > First, social network analysis is applicable to multiple levels of analysis. In 
 > educational research, this analytical lens can be applied to students, classrooms, 
 > schools, or districts. This makes it possible to study nearly any type of social system 
@@ -17,6 +17,7 @@ title: Week 3 - Applications
 2. A valued relationship has weight to indicate the strength of the relationship.   
 3. In a directed relationship, the relationship can be symmetric (reciprocal, two-way) between the two nodes or asymmetric (one-way).   
 4. A directed network has in-degree centrality and out-degree centrality.
+
 
 ### Reference:
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
