--- a/_posts/2021-02-19-Week5.md
+++ b/_posts/2021-02-19-Week5.md
@@ -3,20 +3,21 @@ layout: post
 title: Week 5 - Sociograms and Density
 ---
 
-### Takeaways
+### Takeaways: 
 > A final confusion is whether relations among a network's actors need to exhibit closure or 
 > density in order to generate social capital. This is the fundamental distinction between 
 > Bourdieu's and Coleman's definitions of social capital and their emphases on closed, 
 > functional networks, and Burt's definition, which emphasizes access to diverse streams of 
 > information (Carolan, 2014, chapter 5).
-   
+
 The comparison between the two competing models, structural holes as social capital vs. network closure as social capital, shows that they both have advantages and disadvantages in defining and measuring social capital (network location or embedded resources). While closure and density build strong ties among the members in the network with confirmation on information from the redundant connections, the structural hole provides opportunity for reaching higher volume of information.
 
 > Few of the friendships, however, are reciprocal (reciprocity), and some parts of the 
-> network are “thicker” than others (density).   
+> network are “thicker” than others (density) (Carolan, 2014, chapter 5). 
 
 Reciprocity and density are the essential entry points when interpreting the relationships of a network graph.
 
+> A network's diameter refers to the longest path between any two actors (Carolan, 2014, chapter 5).
 <!-- blank line -->
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/c1CwUumWhKQ" frameborder="0" allowfullscreen="true"> </iframe>
