--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -11,9 +11,11 @@ My initial understanding of social network was about the "[six degrees of separa
 
 Carolan (2014, chapter 1) explains how SNA is applied in learning science research to discover the interaction patterns in the pedagogical settings/learning environment.
 > Social network analysis focuses on the types of relations one has with others and
-> how these relations influence individual and group behavior and/or attitudes.
+> how these relations influence individual and group behavior and/or attitudes.   
 
-### Reference:
+I learned from this week's content that networks are everywhere! I didn't realized that social network analysis is a popular methodological approach in the field of public health.  
+
+### References:
 Borgatti, Stephen P, Ajay Mehra, Daniel J Brass, and Giuseppe Labianca. 2009. “Network Analysis in the Social Sciences.” Science 323 (5916): 892–95. https://doi.org/10.1126/science.1165821.   
 
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
