--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -4,6 +4,13 @@ title: Week 2 - Basic Network Concepts
 ---
 
 ### Concepts:  
+* nodes: 
+* edges: 
+* a complete network: 
+* ego networks: 
+* [one-mode networks and two-mode networks](https://toreopsahl.com/tnet/two-mode-networks/defining-two-mode-networks/#:~:text=Most%20networks%20are%20defined%20as,et%20al.%2C%202008).): This post distinguishs one-mode networks and two-mode networks that "most networks are defined as one-mode networks with one set of nodes that are similar to each other", whereas two-mode networks have "two different sets of nodes, and ties existing only between nodes belonging to different sets."
+
+### Reflections: 
 > Perhaps one important change introduced by active learning is the facilitation of student
 > networks to be stronger, less centralized, or structured in some other new way to maximize 
 > student learning. (Carolan, 2014, chapter 2).   
