--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -13,7 +13,7 @@ Carolan (2014, chapter 1) explains how SNA is applied in learning science resear
 > Social network analysis focuses on the types of relations one has with others and
 > how these relations influence individual and group behavior and/or attitudes.   
 
-I learned from this week's content that [networks are everywhere](https://mathigon.org/course/graph-theory/introduction)! Networks remind me of graphs in mathematics. I didn't realized that social network analysis is a popular methodological approach in the field of public health. 
+I learned from this week's content that [networks are everywhere](https://mathigon.org/course/graph-theory/introduction)! Networks remind me of [graph theory](https://en.wikipedia.org/wiki/Graph_theory#Visibility_problems) in mathematics. I didn't realized that social network analysis is a popular methodological approach in the field of public health. 
 
 ### References:
 Borgatti, Stephen P, Ajay Mehra, Daniel J Brass, and Giuseppe Labianca. 2009. “Network Analysis in the Social Sciences.” Science 323 (5916): 892–95. https://doi.org/10.1126/science.1165821.   
