--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -4,13 +4,13 @@ title: Week 2 - Basic Network Concepts
 ---
 
 ### Concepts:  
-* node (actor, vertex, ego, agent): individual (e.g., item, person)
+* node (actor, vertex, point, ego, agent): individual (e.g., item, person)
 * edge (link, line, arc, tie): connection, relationship, interaction (undirected, directed, type, weight)
 * graph
 * sociogram
 * matrix: (table, data frame, list, array, vector)
 * complete network: complete topology, fully connected network with direct link between all paris of nodes.   
-![Diagram of different network topologies](https://upload.wikimedia.org/wikipedia/commons/9/97/NetworkTopologies.svg)
+Diagram of different network topologies: ![Diagram of different network topologies](https://upload.wikimedia.org/wikipedia/commons/9/97/NetworkTopologies.svg)
 * [ego networks](https://research.library.gsu.edu/c.php?g=916490&p=6612505#:~:text=Ego%20Network,are%20'surrounded'%20by%20alters): This post states that "Egocentric networks are local networks with one central node, known as the **ego**. The network is based off the ego and all other nodes directly connected to the ego are called **alters**. An Ego is the focal point of the network during data collection and analysis and are ‘surrounded’ by alters."
 * [one-mode networks and two-mode networks](https://toreopsahl.com/tnet/two-mode-networks/defining-two-mode-networks/#:~:text=Most%20networks%20are%20defined%20as,et%20al.%2C%202008): This post distinguishs one-mode networks and two-mode networks that "most networks are defined as one-mode networks with one set of nodes that are similar to each other", whereas two-mode networks have "two different sets of nodes, and ties existing only between nodes belonging to different sets."
 
