--- a/_posts/2021-02-05-Week3.md
+++ b/_posts/2021-02-05-Week3.md
@@ -12,7 +12,7 @@ title: Week 3 - Applications
 > richer description of social life that is both contextually grounded and empirically 
 > rigorous (Carolan, 2014, chapter 2).
 
-### Takeaway: 
+### Key Takeaways: 
 1. A binary relationship indicates whether a relationship exists between two nodes (1) or not (0).   
 2. A valued relationship has weight to indicate the strength of the relationship.   
 3. In a directed relationship, the relationship can be symmetric (reciprocal, two-way) between the two nodes or asymmetric (one-way).   
