--- a/_posts/2021-04-16-Week13.md
+++ b/_posts/2021-04-16-Week13.md
@@ -4,6 +4,9 @@ title: Week 13 - Novel Approaches and Analytics
 ---
 
 ### Collaboration Index (CI)
-I was inspired by the study of [Luhrs and McAnally-Salas (2016)](https://www.ncolr.org/jiol/issues/pdf/14.1.3.pdf). The researchers used social network analysis to design a collaboration index to effectively identify the levels of collaboration in asynchronous discussion forums in hybrid and online course.
+I was inspired by the study of [Luhrs and McAnally-Salas (2016)](https://www.ncolr.org/jiol/issues/pdf/14.1.3.pdf). The researchers used social network analysis to design a collaboration index to effectively identify the levels of collaboration in asynchronous discussion forums in hybrid and online course. The collaboration index quantifies the representation of interaction, connectivity, and collaboration. This research was conducted in different course delivery types and different levels of instruction, which provides a diverse data set to evaluate the validity and reliability of the collaboration index. Apply content analysis would help find a reliable indicator of collaboration. As most of the online interactions among the instructors, students, and content at universities or training programs are connected by the use of LMS, SNAPP is a suitable tool to extract student data, then use Gephi to further analyze the statistical values, visualize the networks, and compare the networks.   
+
+My reflection for this week was based upon the innovated application of SNA to develop monitoring system to calculate the collaboration index (i.e., centrality scores, strongly connected components) by using tools named Social Networks Adapting Pedagogical Practice \([SNAPP](https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.412.899&rep=rep1&type=pdf)\) and [Gephi](https://gephi.org/users/) to analyze the data.
 
 ### Reference:
+Luhrs & McAnally-Salas (2016). Collaboration levels in asynchronous discussion forums: A social network analysis approach. Journal of Interactive Online Learning. 14(1). 
