--- a/_posts/2021-04-09-Week12.md
+++ b/_posts/2021-04-09-Week12.md
@@ -3,7 +3,13 @@ layout: post
 title: Week 12 - Planning SNA Research and Projects
 ---
 
-###
+### Knowledge Construction Through Social Interactions in Computer-Mediated Learning
+I am interested in studying how social interaction through computer-mediated synchronous learning networks (video conferencing) and asynchronous learning networks (Slack/Hypothes.is) supports individual learner’s knowledge construction. 
 
 
 ### Reference:
+Garrison, D. (2009). Communities of Inquiry in Online Learning. Encyclopedia of Distance Learning. 352-355. 10.4018/978-1-60566-198-8.ch052.   
+
+Garrison, D. R., Anderson, T., & Archer, W. (2000). Critical inquiry in a text-based environment: Computer conferencing in higher education model. The Internet and Higher Education, 2(2-3), 87-105.   
+
+Vygotsky, L. S. (1978). Mind in society: The development of higher psychological processes. Cambridge, MA: Harvard University Press.
