--- a/_posts/2021-04-09-Week12.md
+++ b/_posts/2021-04-09-Week12.md
@@ -4,8 +4,10 @@ title: Week 12 - Planning SNA Research and Projects
 ---
 
 ### Knowledge Construction Through Social Interactions in Computer-Mediated Learning
-I am interested in studying how social interaction through computer-mediated synchronous learning networks (video conferencing) and asynchronous learning networks (Slack/Hypothes.is) supports individual learner’s knowledge construction. 
-
+I am interested in studying how social interaction through computer-mediated synchronous learning networks (video conferencing) and asynchronous learning networks (Slack/Hypothes.is) supports individual learner’s knowledge construction. Social network analysis (SNA) is an appropriate approach to model, analyze, and identify if there is high levels of student-teacher, student-student, or student-content interaction, connectivity, and collaboration.
+* Community of Inquiry (CoI) framework (Garrison, Anderson, and Archer, 2000)
+* Vygotsky's sociocultural theory (Vygotsky, 1978)
+* SNA descriptive and statistical methods with further analysis with ERGMs, collaboration index, and content analysis 
 
 ### Reference:
 Garrison, D. (2009). Communities of Inquiry in Online Learning. Encyclopedia of Distance Learning. 352-355. 10.4018/978-1-60566-198-8.ch052.   
