--- a/_posts/2021-04-02-Week11.md
+++ b/_posts/2021-04-02-Week11.md
@@ -4,6 +4,7 @@ title: Week 11 - Network Dynamics and Temporality
 ---
 
 ### Temporal network analysis
-This ![image](https://teneto.readthedocs.io/en/latest/_images/what_is_tnt-1.png) from this web post is really helpful for me to visualize and distinguish a temporal network from a static network.
+![image](https://teneto.readthedocs.io/en/latest/_images/what_is_tnt-1.png)   
+This image was retrieved from this web post, which was really helpful for me to visualize and distinguish a temporal network from a static network.
 
 ### Reference:
