--- a/_posts/2021-04-02-Week11.md
+++ b/_posts/2021-04-02-Week11.md
@@ -5,6 +5,6 @@ title: Week 11 - Network Dynamics and Temporality
 
 ### Temporal network analysis
 ![image](https://teneto.readthedocs.io/en/latest/_images/what_is_tnt-1.png)   
-This image was retrieved from this web post, which was really helpful for me to visualize and distinguish a temporal network from a static network.
+This image was retrieved from this [web post](https://teneto.readthedocs.io/en/latest/what_is_tnt.html), which was really helpful for me to visualize and distinguish a temporal network from a static network.
 
 ### Reference:
