--- a/_posts/2021-03-26-Week10.md
+++ b/_posts/2021-03-26-Week10.md
@@ -3,7 +3,8 @@ layout: post
 title: Week 10 - Statistical Analysis with Network Data
 ---
 
-###
+### Descriptive analysis for SNA versus statistical inference for SNA
+I have only used descriptive analysis for my course project, but statistical inferential analsis will be needed for statistical network analysis named ERGMs (Exponential random graph models) to identify the significant factors in social network activities. 
 
-
-### Reference:
+### Resources:
+* [Statistical tools](http://www.faculty.ucr.edu/~hanneman/nettext/C18_Statistics.html)
