--- a/_posts/2021-03-19-Week9.md
+++ b/_posts/2021-03-19-Week9.md
@@ -3,7 +3,9 @@ layout: post
 title: Week 9 - Applications
 ---
 
-###
+### Key Takeaways:
+Lee et al. (2021) applied SNA to analyze the students’ interactions and investigate the engagement patterns. This research studied the influence of students’ interactions, help-seeking, help-providing, and academic performance in blended online learning, specifically in the asynchronous online discussion component of the course. Social network theory and self-regulated learning were used as theoretical framework to study the dynamics conceptual knowledge construction in online learning environment. This research combined SNA and content analysis. Content analysis was applied to analyze the students’ posts. Take-aways for my research project: a. Applying SNA (sociogram network visualizations) in analyzing social interactions, presence of social support to increase the learners’ engagement in knowledge collaboration in computer-mediated communication environment (e.g., degree centrality, density of the network, network centralization); b. Analyzing help-seeking and help-providing (e.g., teaching presence, knowledge authority presence) behavior patterns and academic performance in computer supported collaborative learning.
 
 
 ### Reference:
+Lee, D., Rothstein, R., Dunford, A., Berger, E., Rhoads, J. F., & DeBoer, J. (2021). “Connecting online”: The structure and content of students’ asynchronous online networks in a blended engineering class. Computers and Education, 163, Computers and education, 2021-04, Vol.163. https://doi.org/10.1016/j.compedu.2020.104082
