--- a/_posts/2021-01-29-Week2.md
+++ b/_posts/2021-01-29-Week2.md
@@ -23,8 +23,8 @@ Since active learning is based on constructivism, how students interact with the
 
 I was wondering how important classroom interactions are to the learning outcome. Isn't that effective learning coming from connecting the new content (new node) to the individual's prior knowledge (an existing node)? To what degree does classroom interaction help in creating the tie?
 
-#### My first network plot
-![plot](blog/public/Rplot.png)   
+#### My first network plot:
+![plot](/images/Rplot.png)   
 
 ### Reference:
 Grunspan, Daniel Z., Benjamin L. Wiggins, and Steven M. Goodreau. 2014. “Understanding Classrooms Through Social Network Analysis: A Primer for Social Network Analysis in Education Research.” Edited by Erin Dolan. CBELife Sciences Education 13 (2): 167–78. https://doi.org/10.1187/cbe.13-08-0162.
