--- a/_posts/2021-02-26-Week6.md
+++ b/_posts/2021-02-26-Week6.md
@@ -6,4 +6,10 @@ title: Week 6 - Centrality and Centralization
 ### Resources: 
 This [resource](https://cs.brynmawr.edu/Courses/cs380/spring2013/section02/slides/05_Centrality.pdf) presents the concepts of network centrality with the graphs, mathematical models, and examples.
 
+<p class="message">
+**Centrality** is node-level measure, which helps researchers identify which node (e.g., individual) is important in the network.
+**Centralization** is network-level measure, which helps researchers compare different networks.
+</p>
+
+
 ### Reference:
