--- a/_posts/2021-02-05-Week3.md
+++ b/_posts/2021-02-05-Week3.md
@@ -18,6 +18,8 @@ title: Week 3 - Applications
 3. In a directed relationship, the relationship can be symmetric (reciprocal, two-way) between the two nodes or asymmetric (one-way).   
 4. A directed network has in-degree centrality and out-degree centrality.
 
+### Reflections:
+Social capital 
 
 ### Reference:
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
