--- a/_posts/2021-02-12-Week4.md
+++ b/_posts/2021-02-12-Week4.md
@@ -3,3 +3,8 @@ layout: post
 title: Week 4 - Collect and Manage Network Data
 ---
 
+### Key Takeaways:
+<p class="message">
+Relational data that describe ties.   
+Attribute data that describe nodes.
+</p>
