--- a/_posts/2021-02-12-Week4.md
+++ b/_posts/2021-02-12-Week4.md
@@ -4,7 +4,8 @@ title: Week 4 - Collect and Manage Network Data
 ---
 
 ### Key Takeaways:
-<p class="message">
-Relational data that describe ties.   
-Attribute data that describe nodes.
-</p>
+<p class="message">Relational data describes ties. Attribute data describes nodes.</p>
+
+* Tidy data:
+![tidy](https://d33wubrfki0l68.cloudfront.net/6f1ddb544fc5c69a2478e444ab8112fb0eea23f8/91adc/images/tidy-1.png)
+This image was retrieved from *[R for Data Science](https://r4ds.had.co.nz/tidy-data.html)*, which intuitively presents the concepts of tidy dataset in Figure 12.1.
