--- a/_posts/2021-02-19-Week5.md
+++ b/_posts/2021-02-19-Week5.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 5 - Sociograms and Density
 ---
 
-### Takeaways: 
+### Key Takeaways: 
 > A final confusion is whether relations among a network's actors need to exhibit closure or 
 > density in order to generate social capital. This is the fundamental distinction between 
 > Bourdieu's and Coleman's definitions of social capital and their emphases on closed, 
@@ -23,6 +23,7 @@ Reciprocity and density are the essential entry points when interpreting the rel
   <iframe src="https://www.youtube.com/embed/c1CwUumWhKQ" frameborder="0" allowfullscreen="true"> </iframe>
 </figure>
 <!-- blank line -->
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/jbwbl6x678e9u3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/plotti/social-network-analysis-part-ii" title="Social network analysis part ii" target="_blank">Social network analysis part ii</a> </strong> from <strong><a href="https://www.slideshare.net/plotti" target="_blank">THomas Plotkowiak</a></strong> </div>
 
 
 ### Reference:
