--- a/_posts/2021-02-19-Week5.md
+++ b/_posts/2021-02-19-Week5.md
@@ -22,7 +22,11 @@ Reciprocity and density are the essential entry points when interpreting the rel
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/c1CwUumWhKQ" frameborder="0" allowfullscreen="true"> </iframe>
 </figure>
-<!-- blank line -->
+<!-- blank line -->   
+
+### Resources:
+This is a very informative presentation to complement this week's readings.   
+
 <iframe src="//www.slideshare.net/slideshow/embed_code/key/jbwbl6x678e9u3" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/plotti/social-network-analysis-part-ii" title="Social network analysis part ii" target="_blank">Social network analysis part ii</a> </strong> from <strong><a href="https://www.slideshare.net/plotti" target="_blank">THomas Plotkowiak</a></strong> </div>
 
 
