--- a/_posts/2021-03-05-Week7.md
+++ b/_posts/2021-03-05-Week7.md
@@ -3,3 +3,7 @@ layout: post
 title: Week 7 - Components and Cliques
 ---
 
+### Key Takeaways:
+* [NodeXL](https://nodexlgraphgallery.org/pages/AboutNodeXL.aspx)   
+Examples with hands-on guidance are listed on the *[Tutorials](https://www.smrfoundation.org/nodexl/tutorials/)* page.   
+
