--- a/_posts/2021-02-26-Week6.md
+++ b/_posts/2021-02-26-Week6.md
@@ -11,4 +11,5 @@ This [resource](https://cs.brynmawr.edu/Courses/cs380/spring2013/section02/slide
 <b>Centralization</b> is network-level measure, which helps researchers compare different networks.
 </p>
 
-
+#### Centrality
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/hLyaZn5N9vhORB" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/dnac2017/tuesday-morning-lecture-descriptive-statistics" title="02 Descriptive Statistics (2017)" target="_blank">02 Descriptive Statistics (2017)</a> </strong> from <strong><a href="https://www.slideshare.net/dnac2017" target="_blank">Duke Network Analysis Center</a></strong> </div>
