--- a/_posts/2021-01-20-Week1.md
+++ b/_posts/2021-01-20-Week1.md
@@ -7,7 +7,7 @@ title: Week 1 - Social Network Analysis (SNA)
 > Individuals are embedded in thick webs of social relations and interactions (Borgatti et 
 > al., 2009).   
 
-My initial understanding of social network was about the "[six degrees of separation](https://en.wikipedia.org/wiki/Six_degrees_of_separation)" and the strong ties and weak ties among people in social media. The relations in twitter could be bidirectional or unidirectional" (Jeragh et al., 2012, p. 905). The ""While Twitter is a unidirectional network that the network could be formed by only one person following another person without approval, Facebook is a bidirectional network that an "Add Friend" request needs to be confirmed by the request receiver in order to establish the connection. 
+My initial understanding of social network was about the "[six degrees of separation](https://en.wikipedia.org/wiki/Six_degrees_of_separation)" and the strong ties and weak ties among people in social media. The relations in twitter could be bidirectional or unidirectional" (Jeragh et al., 2012, p. 905). While Twitter is a unidirectional network that the network could be formed by only one person following another person without approval, Facebook is a bidirectional network that an "Add Friend" request needs to be confirmed by the request receiver in order to establish the connection. 
 
 Carolan (2014, chapter 1) explains how SNA is applied in learning science research to discover the interaction patterns in the pedagogical settings/learning environment.
 > Social network analysis focuses on the types of relations one has with others and
