--- a/_posts/2021-03-12-Week8.md
+++ b/_posts/2021-03-12-Week8.md
@@ -5,4 +5,5 @@ title: Week 8 - Ego Networks
 
 ### Egocentric networks (ego networks)
 * A subgraph (local network) that is based on one central node (the **ego**).
-* **Alters**: Nodes that directly connected to the ego.
+* **Alters**: Nodes that directly connected to the ego.   
+![ego](https://commons.wikimedia.org/wiki/File:Egocentric_Network.png)
