--- a/_posts/2021-03-12-Week8.md
+++ b/_posts/2021-03-12-Week8.md
@@ -7,4 +7,4 @@ title: Week 8 - Ego Networks
 * A subgraph (local network) that is based on one central node (the **ego**).
 * **Alters**: Nodes that directly connected to the ego.   
 Here is a [graph](https://commons.wikimedia.org/wiki/File:Egocentric_Network.png) illustrating an ego network.
-![ego](https://upload.wikimedia.org/wikipedia/commons/f/f6/Egocentric_Network.png)
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f6/Egocentric_Network.png" width="400"> 
