--- a/_posts/2021-02-05-Week3.md
+++ b/_posts/2021-02-05-Week3.md
@@ -19,7 +19,13 @@ title: Week 3 - Applications
 4. A directed network has in-degree centrality and out-degree centrality.
 
 ### Reflections:
-Social capital 
+> A final confusion is whether relations among a network's actors need to exhibit closure or 
+> density in order to generate social capital. This is the fundamental distinction between 
+> Bourdieu's and Coleman's definitions of social capital and their emphases on closed, 
+> functional networks, and Burt's definition, which emphasizes access to diverse streams of 
+> information (Carolan, 2014, chapter 10).
+
+The comparison between the two competing models, structural holes as social capital vs. network closure as social capital, shows that they both have advantages and disadvantages in defining and measuring social capital (network location or embedded resources). While closure and density build strong ties among the members in the network with confirmation on information from the redundant connections, the structural hole provides opportunity for reaching higher volume of information.
 
 ### Reference:
 Carolan, B. V. (2014). *Social network analysis and education: Theory, methods & applications.* Thousand Oaks, CA: SAGE Publications.   
